projects/vb6parse/snapshots/tests/library/environment/error/error_file_logging.snap
---
source: projects/vb6parse/tests/library/environment/error.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: PrintStatement
      children:
        - kind: PrintKeyword
          text: Print
        - kind: Whitespace
          text: " "
        - kind: Octothorpe
          text: "#"
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: fileNum
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: BinaryExpression
                  children:
                    - kind: BinaryExpression
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Error \""
                            - kind: Whitespace
                              text: " "
                            - kind: Ampersand
                              text: "&"
                            - kind: Whitespace
                              text: " "
                            - kind: MemberAccessExpression
                              children:
                                - kind: Identifier
                                  text: Err
                                - kind: PeriodOperator
                                  text: "."
                                - kind: Identifier
                                  text: Number
                        - kind: Whitespace
                          text: " "
                        - kind: Ampersand
                          text: "&"
                        - kind: Whitespace
                          text: " "
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\": \""
                    - kind: Whitespace
                      text: " "
                    - kind: Ampersand
                      text: "&"
                    - kind: Whitespace
                      text: " "
                    - kind: CallExpression
                      children:
                        - kind: ErrorKeyword
                          text: Error
                        - kind: LeftParenthesis
                          text: (
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: MemberAccessExpression
                                  children:
                                    - kind: Identifier
                                      text: Err
                                    - kind: PeriodOperator
                                      text: "."
                                    - kind: Identifier
                                      text: Number
                        - kind: RightParenthesis
                          text: )
        - kind: Newline
          text: "\n"
